<resources>
    <string name="app_name">My Application</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="u2022">•</string>
    <string name="website">Visit Website</string>
    <string name="movie_app_name">CineStream App</string>
    <string name="watch_now">Watch Now</string>
    <string name="watchlist">Watchlist</string>
    <string name="search_tv_movie">Search TV Movie</string>
    <string name="cineai_chatbot">CineAI ChatBot</string>
    <string name="welcome_to_cineai_chatbot">Welcome to CineAI Chatbot !</string>
    <string name="welcome_to_chat">Welcome to CineAI Chatbot \nTry it now !</string>
    <string name="ask_me_anything">Ask me anything ...</string>
    <string name="add_your_payment_information">Add your payment information</string>
    <string name="card_information">Card Information</string>
    <string name="card_number">Card number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc">CVC</string>
    <string name="billing_address">Billing Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="pay_10_99">Pay 10.99 $</string>
    <string name="premium">Premium 👑</string>
    <string name="vote_here">Vote here</string>
    <string name="note_this_is_a_test_mode_you_can_enter_any_information">Note: This is a test mode. You can enter any information.</string>
</resources>