<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/layoutPaymentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="@dimen/_22sdp">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/add_your_payment_information"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageClose"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_close"
                app:tint="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:includeFontPadding="false"
            android:text="@string/card_information"
            android:textColor="#747679"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/border_top_left_right"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp">

            <EditText
                android:id="@+id/inputCardNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/card_number"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLength="16"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:textSize="@dimen/_11ssp" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_visa_card" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_master_card" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_paypal" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_american_express" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@drawable/border_bottom_left_right">

            <EditText
                android:id="@+id/inputDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/mm_yy"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLength="4"
                android:padding="@dimen/_12sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toStartOf="@id/inputCVC"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/inputCVC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/cvc"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLength="3"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/inputDate"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/colorBorderInput"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_cvc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:includeFontPadding="false"
            android:text="@string/billing_address"
            android:textColor="#747679"
            android:textSize="@dimen/_10ssp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/border_top_left_right"
            android:entries="@array/countries_array"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/inputZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@drawable/border_bottom_left_right"
            android:hint="@string/zip_code"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="6"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:text="@string/note_this_is_a_test_mode_you_can_enter_any_information"
            android:textColor="#747679"
            android:textSize="@dimen/_10ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/pay_10_99"
            android:textColor="@color/colorTextIcons"
            android:alpha="0.3"
            android:enabled="false"
            app:cornerRadius="@dimen/_6sdp" />

    </LinearLayout>
</layout>
